# igraphic

./: CMakeLists.txt  GraphicSharedLoader.hpp  Readme.md
.github/workflows/: cmake.yml
cmake/: FindSystem.cmake
event/: IMouse.hpp
graphic/: IModel.hpp  IPolygon.hpp  ISprite.hpp  IText.hpp
includes/: IGraphicModule.hpp
includes/audio/: IMusic.hpp  ISound.hpp
includes/event/: IEvent.hpp  IKeyboard.hpp  IMouse.hpp
includes/graphic/: IModel.hpp  IPolygon.hpp  ISprite.hpp  IText.hpp
includes/window/: ICamera.hpp  IWindow.hpp
tests/: TestGraphicModule.cpp
tests/includes/: DummyGraphicModule.hpp
tests/includes/audio/: DummyMusic.hpp  DummySound.hpp
tests/includes/event/: DummyEvent.hpp  DummyKeyboard.hpp  DummyMouse.hpp
tests/includes/graphic/: DummyModel.hpp  DummyPolygon.hpp  DummySprite.hpp  DummyText.hpp
tests/includes/window/: DummyCamera.hpp  DummyWindow.hpp
window/: ICamera.hpp  IWindow.hpp
